--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     <title> Portfólio | Maria Rita </title>
 </head>
 <body>
+            <!--Header-->
+    <header class="header" id="header">
+        <nav class="nav container">
+            <a href="#" class="Nav_logo">Maria Rita</a>
+
+            <div class="nav_menu" id="nav-menu">
+                <ul class="nav_list grid">
+                    <li class="nav_item">
+                        <a href="#" class="nav"
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
     
 
     <script src="./js/main.js"></script>
