--- a/index.html
+++ b/index.html
@@ -18,32 +18,32 @@
                 <ul class="nav_list grid">
                     <li class="nav_item">
                         <a href="#home" class="nav_link">
-                            <i class="uil uil-estate"></i> Home
+                            <i class="uil uil-estate nav_icon"></i> Home
                         </a>
                     </li>
                     <li class="nav_item">
                         <a href="#sobre" class="nav_link">
-                            <i class="uil uil-user"></i> Sobre
+                            <i class="uil uil-user nav_icon"></i> Sobre
                         </a>
                     </li>
                     <li class="nav_item">
                         <a href="#skills" class="nav_link">
-                            <i class="uil uil-file-alt"></i> Skills
+                            <i class="uil uil-file-alt nav_icon"></i> Skills
                         </a>
                     </li>
                     <li class="nav_item">
                         <a href="#projetos" class="nav_link">
-                            <i class="uil uil-briefcase-alt"></i> Projetos
+                            <i class="uil uil-briefcase-alt nav_icon"></i> Projetos
                         </a>
                     </li>
                     <li class="nav_item">
                         <a href="#portfolio" class="nav_link">
-                            <i class="uil uil-scenery"></i> Portfólio
+                            <i class="uil uil-scenery nav_icon"></i> Portfólio
                         </a>
                     </li>
                     <li class="nav_item">
                         <a href="#contato" class="nav_link">
-                            <i class="uil uil-message"></i> Entre em contato
+                            <i class="uil uil-message nav_icon"></i> Contato
                         </a>
                     </li>
                 </ul>
