--- a/index.html
+++ b/index.html
@@ -57,6 +57,31 @@
             </div>
         </nav>
     </header>
+
+    <!-- main -->
+    <main class="main">
+        <!-- home -->
+        <section class="home section" id="home">
+            <div class="home_container container grid">
+                <div class="home_content grid">
+                    <div class="home_social">
+                        <a href="https://www.linkedin.com/in/maria-rita-mendon%C3%A7a-559048167/" class="home_social-icon">
+                            <i class="uil uil-linkedin-alt"></i>
+                        </a>
+
+                        <a href="https://www.instagram.com/rrita_07/" class="home_social-icon">
+                            <i class="uil uil-instagram"></i>
+                        </a>
+
+                        <a href="https://github.com/atir75" class="home_social-icon">
+                            <i class="uil uil-github-alt"></i>
+                        </a>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     
 
     <script src="./js/main.js"></script>
