--- a/index.html
+++ b/index.html
@@ -65,18 +65,28 @@
             <div class="home_container container grid">
                 <div class="home_content grid">
                     <div class="home_social">
-                        <a href="https://www.linkedin.com/in/maria-rita-mendon%C3%A7a-559048167/" class="home_social-icon">
+                        <a href="https://www.linkedin.com/in/maria-rita-mendon%C3%A7a-559048167/" target="_blank" class="home_social-icon">
                             <i class="uil uil-linkedin-alt"></i>
                         </a>
 
-                        <a href="https://www.instagram.com/rrita_07/" class="home_social-icon">
+                        <a href="https://www.instagram.com/rrita_07/" target="_blank" class="home_social-icon">
                             <i class="uil uil-instagram"></i>
                         </a>
 
-                        <a href="https://github.com/atir75" class="home_social-icon">
+                        <a href="https://github.com/atir75" target="_blank" class="home_social-icon">
                             <i class="uil uil-github-alt"></i>
                         </a>
+                    </div>
 
+                    <div class="home_img">
+                            <svg class="home_blob" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+                                <path fill="#BE95C4" d="M52.1,-62.8C66.9,-49.7,77.8,-32.6,80,-14.8C82.3,3,75.9,21.6,66.7,39.5C57.6,57.5,45.5,74.8,28.8,82.3C12,89.8,-9.5,87.5,-28.9,80.2C-48.3,72.8,-65.5,60.3,-75.4,43.4C-85.3,26.6,-87.9,5.3,-83.8,-14.3C-79.8,-33.9,-69.2,-51.9,-54.1,-64.9C-39.1,-78,-19.5,-86.1,-0.4,-85.6C18.6,-85.1,37.3,-75.9,52.1,-62.8Z" transform="translate(100 100)" />
+                            </svg>
+                    </div>
+
+                    <div class="home_data">
+                        <h1 class="home_title">Olá, me chamo Maria Rita</h1>
+                        
                     </div>
                 </div>
             </div>
