commit style home

--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
 
                 <div class="home_scroll">
                     <a href="#sobre" class="home_scroll-button button--flex">
-                        <i class="uil uil-mouse-alt"></i>
+                        <i class="uil uil-mouse-alt home_scroll-mouse"></i>
+                        <span class="home_scroll-name">Ir para baixo</span>
+                        <i class="uil uil-arrow-down home_scroll-arrow"></i>
                     </a>
                 </div>
             </div>
