commit home description

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                 </clipPath>
                             </defs>
                         
-                            <image class="home_blob-img" xlink:href="./img/fotosorrindo.jpeg" clip-path="url(#user-space)"/>
+                            <image class="home_blob-img" x='25' y='18' xlink:href="./img/fotosorrindo.jpeg" clip-path="url(#user-space)"/>
                             </svg>
                         
                     </div>
