commit sobre inicio

--- a/index.html
+++ b/index.html
@@ -110,9 +110,14 @@
                 </div>
             </div>
         </section>
-    </main>
-    
 
+        <!-- Sobre -->
+        
+
+
+
+
+    </main>
     <script src="./js/main.js"></script>
 </body>
 </html>
