--- a/index.html
+++ b/index.html
@@ -112,7 +112,19 @@
         </section>
 
         <!-- Sobre -->
-        
+        <section class="about section" id="about">
+            <h2 class="section_title">Sobre Mim</h2>
+            <span class="section_subtitle">Uma preve introdução: </span>
+
+            <div class="about_container container grid">
+                <img src="./img/fotoeditada.jpeg" class="about_img">
+
+                <div class="about_data">
+                    <p class="about_description">Desenvolvedora web, iniciei a carreira em 2021 entrando na faculdade de Sistemas de Informação e adquirindo conhecimento em Frontend e Backend, com experiência de estágio em Banco de Dados, Servidores, Frontend e Administração de Sistemas.</p>
+                </div>
+            </div>
+
+        </section>
 
 
 
