--- a/index.html
+++ b/index.html
@@ -121,6 +121,12 @@
 
                 <div class="about_data">
                     <p class="about_description">Desenvolvedora web, iniciei a carreira em 2021 entrando na faculdade de Sistemas de Informação e adquirindo conhecimento em Frontend e Backend, com experiência de estágio em Banco de Dados, Servidores, Frontend e Administração de Sistemas.</p>
+
+                    <div class="about_info">
+                        <div>
+                            <span class="about_info-title"></span>
+                        </div>
+                    </div>
                 </div>
             </div>
 
