--- a/index.html
+++ b/index.html
@@ -124,8 +124,18 @@
 
                     <div class="about_info">
                         <div>
-                            <span class="about_info-title"></span>
+                            <span class="about_info-title">01</span>
+                            <span class="about_info-name">Ano <br> experiência</span>
                         </div>
+                        <div>
+                            <span class="about_info-title">27+</span>
+                            <span class="about_info-name">Projetos <br> Completos</span>
+                        </div>
+                    </div>
+
+                    <div class="about_buttons">
+                        <a download="" href="./curriculo/MariaRita.pdf" class="button button--flex"></a>
+                        <i class="uil uil-download-alt"></i>
                     </div>
                 </div>
             </div>
