--- a/index.html
+++ b/index.html
@@ -132,12 +132,14 @@
                             <span class="about_info-name">Projetos <br> Completos</span>
                         </div>
                     </div>
-
                     <div class="about_buttons">
-                        <a download="" href="./curriculo/MariaRita.pdf" class="button button--flex"></a>
-                        <i class="uil uil-download-alt"></i>
+                        <a download="" href="./curriculo/MariaRita.pdf" class="button button-flex">
+                            Download CV <i class="uil uil-download-alt"></i>
+                        </a>
                     </div>
+
                 </div>
+                
             </div>
 
         </section>
