--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         </a>
                     </li>
                     <li class="nav_item">
-                        <a href="#sobre" class="nav_link">
+                        <a href="#about" class="nav_link">
                             <i class="uil uil-user nav_icon"></i> Sobre
                         </a>
                     </li>
@@ -137,13 +137,14 @@
                             Download CV <i class="uil uil-download-alt"></i>
                         </a>
                     </div>
-
                 </div>
-                
             </div>
-
         </section>
 
+<!-- skills -->
+    <section class="skills section" id="skills">
+        
+    </section>
 
 
 
