--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
 
 <!-- skills -->
     <section class="skills section" id="skills">
-        
+        <h2 class="section_title">Skills</h2>
+        <span class="section_subtitle"></span>
     </section>
 
 
