--- a/index.html
+++ b/index.html
@@ -144,7 +144,21 @@
 <!-- skills -->
     <section class="skills section" id="skills">
         <h2 class="section_title">Skills</h2>
-        <span class="section_subtitle"></span>
+        <span class="section_subtitle">Minhas Skills</span>
+
+        <div class="skills_container container grid">
+            <div>
+                <div class="skills_content">
+                    <div class="skills_header">
+                        <i class="uil uil-brackets-curly skills_icon"></i>
+
+                        <div>
+                            <h1 class="skills_title">Frontend developer</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
 
