--- a/index.html
+++ b/index.html
@@ -148,12 +148,108 @@
 
         <div class="skills_container container grid">
             <div>
+                <!-- skills -->
                 <div class="skills_content">
                     <div class="skills_header">
                         <i class="uil uil-brackets-curly skills_icon"></i>
 
                         <div>
                             <h1 class="skills_title">Frontend developer</h1>
+                            <span class="skills_subtitle">Mais de 1 ano</span>
+                        </div>
+
+                        <i class="uil uil-angle-down skills_arrow"></i> 
+                    </div>
+
+                    <div class="skills_list grid">
+                        <div class="skills_data">
+                            <div class="skills_title">
+                                <h3 class="skills_name">HTML</h3>
+                                <span class="skills_number">90%</span>
+                            </div>
+                            <div class="skills_bar">
+                                <span class="skills_percentage skills_html"></span>
+                            </div>
+                        </div>
+                        <div class="skills_data">
+                            <div class="skills_title">
+                                <h3 class="skills_name">CSS</h3>
+                                <span class="skills_number">80%</span>
+                            </div>
+                            <div class="skills_bar">
+                                <span class="skills_percentage skills_css"></span>
+                            </div>
+                        </div>
+                        <div class="skills_data">
+                            <div class="skills_title">
+                                <h3 class="skills_name">JavaScript</h3>
+                                <span class="skills_number">50%</span>
+                            </div>
+                            <div class="skills_bar">
+                                <span class="skills_percentage skills_js"></span>
+                            </div>
+                        </div>
+                        <div class="skills_data">
+                            <div class="skills_title">
+                                <h3 class="skills_name">Angular</h3>
+                                <span class="skills_number">30%</span>
+                            </div>
+                            <div class="skills_bar">
+                                <span class="skills_percentage skills_angular"></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- skills 2 -->
+                <div class="skills_content">
+                    <div class="skills_header">
+                        <i class="uil uil-server-network skills_icon"></i>
+
+                        <div>
+                            <h1 class="skills_title">Backend developer</h1>
+                            <span class="skills_subtitle">Mais de 2 anos</span>
+                        </div>
+
+                        <i class="uil uil-angle-down skills_arrow"></i> 
+                    </div>
+
+                    <div class="skills_list grid">
+                        <div class="skills_data">
+                            <div class="skills_title">
+                                <h3 class="skills_name">C#</h3>
+                                <span class="skills_number">80%</span>
+                            </div>
+                            <div class="skills_bar">
+                                <span class="skills_percentage skills_c#"></span>
+                            </div>
+                        </div>
+                        <div class="skills_data">
+                            <div class="skills_title">
+                                <h3 class="skills_name">Node JS</h3>
+                                <span class="skills_number">50%</span>
+                            </div>
+                            <div class="skills_bar">
+                                <span class="skills_percentage skills_node"></span>
+                            </div>
+                        </div>
+                        <div class="skills_data">
+                            <div class="skills_title">
+                                <h3 class="skills_name">MySql / Oracle</h3>
+                                <span class="skills_number">60%</span>
+                            </div>
+                            <div class="skills_bar">
+                                <span class="skills_percentage skills_bd"></span>
+                            </div>
+                        </div>
+                        <div class="skills_data">
+                            <div class="skills_title">
+                                <h3 class="skills_name">Java</h3>
+                                <span class="skills_number">10%</span>
+                            </div>
+                            <div class="skills_bar">
+                                <span class="skills_percentage skills_java"></span>
+                            </div>
                         </div>
                     </div>
                 </div>
