--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
                     <div class="skills_list grid">
                         <div class="skills_data">
-                            <div class="skills_title">
+                            <div class="skills_titles">
                                 <h3 class="skills_name">HTML</h3>
                                 <span class="skills_number">90%</span>
                             </div>
@@ -172,7 +172,7 @@
                             </div>
                         </div>
                         <div class="skills_data">
-                            <div class="skills_title">
+                            <div class="skills_titles">
                                 <h3 class="skills_name">CSS</h3>
                                 <span class="skills_number">80%</span>
                             </div>
@@ -181,7 +181,7 @@
                             </div>
                         </div>
                         <div class="skills_data">
-                            <div class="skills_title">
+                            <div class="skills_titles">
                                 <h3 class="skills_name">JavaScript</h3>
                                 <span class="skills_number">50%</span>
                             </div>
@@ -190,7 +190,7 @@
                             </div>
                         </div>
                         <div class="skills_data">
-                            <div class="skills_title">
+                            <div class="skills_titles">
                                 <h3 class="skills_name">Angular</h3>
                                 <span class="skills_number">30%</span>
                             </div>
@@ -207,7 +207,7 @@
                         <i class="uil uil-server-network skills_icon"></i>
 
                         <div>
-                            <h1 class="skills_title">Backend developer</h1>
+                            <h1 class="skills_titles">Backend developer</h1>
                             <span class="skills_subtitle">Mais de 2 anos</span>
                         </div>
 
@@ -216,7 +216,7 @@
 
                     <div class="skills_list grid">
                         <div class="skills_data">
-                            <div class="skills_title">
+                            <div class="skills_titles">
                                 <h3 class="skills_name">C#</h3>
                                 <span class="skills_number">80%</span>
                             </div>
@@ -225,7 +225,7 @@
                             </div>
                         </div>
                         <div class="skills_data">
-                            <div class="skills_title">
+                            <div class="skills_titles">
                                 <h3 class="skills_name">Node JS</h3>
                                 <span class="skills_number">50%</span>
                             </div>
@@ -234,7 +234,7 @@
                             </div>
                         </div>
                         <div class="skills_data">
-                            <div class="skills_title">
+                            <div class="skills_titles">
                                 <h3 class="skills_name">MySql / Oracle</h3>
                                 <span class="skills_number">60%</span>
                             </div>
@@ -243,7 +243,7 @@
                             </div>
                         </div>
                         <div class="skills_data">
-                            <div class="skills_title">
+                            <div class="skills_titles">
                                 <h3 class="skills_name">Java</h3>
                                 <span class="skills_number">10%</span>
                             </div>
