--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                         <i class="uil uil-server-network skills_icon"></i>
 
                         <div>
-                            <h1 class="skills_titles">Backend developer</h1>
+                            <h1 class="skills_title">Backend developer</h1>
                             <span class="skills_subtitle">Mais de 2 anos</span>
                         </div>
 
