commit skills css 4

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                                 <span class="skills_number">80%</span>
                             </div>
                             <div class="skills_bar">
-                                <span class="skills_percentage skills_c#"></span>
+                                <span class="skills_percentage skills_c"></span>
                             </div>
                         </div>
                         <div class="skills_data">
