commit open close

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <div class="skills_container container grid">
             <div>
                 <!-- skills -->
-                <div class="skills_content">
+                <div class="skills_content skills_open">
                     <div class="skills_header">
                         <i class="uil uil-brackets-curly skills_icon"></i>
 
@@ -202,7 +202,7 @@
                 </div>
 
                 <!-- skills 2 -->
-                <div class="skills_content">
+                <div class="skills_content skills_close">
                     <div class="skills_header">
                         <i class="uil uil-server-network skills_icon"></i>
 
@@ -221,7 +221,7 @@
                                 <span class="skills_number">80%</span>
                             </div>
                             <div class="skills_bar">
-                                <span class="skills_percentage skills_c"></span>
+                                <span class="skills_percentage skills_c#"></span>
                             </div>
                         </div>
                         <div class="skills_data">
