--- a/index.html
+++ b/index.html
@@ -259,6 +259,14 @@
 
 
 
+
+
+    <!-- qualification -->
+    <section class="qualification section">
+        
+    </section>
+
+
     </main>
     <script src="./js/main.js"></script>
 </body>
