commit html qualifications

--- a/index.html
+++ b/index.html
@@ -263,7 +263,8 @@
 
     <!-- qualification -->
     <section class="qualification section">
-        
+        <h2 class="section_title">Qualificações</h2>
+        <span class="section_subtitle">Minha jornada profissional</span>
     </section>
 
 
