commit html educacao

--- a/index.html
+++ b/index.html
@@ -269,7 +269,8 @@
         <div class="qualification_container container">
             <div class="qualification_tabs">
                 <div class="qualification_button button--flex">
-                    
+                    <i class="uil uil-graduation-cap qualification_icon"></i>
+                    Educação.
                 </div>
             </div>
         </div>
