commit html return

--- a/index.html
+++ b/index.html
@@ -270,7 +270,12 @@
             <div class="qualification_tabs">
                 <div class="qualification_button button--flex">
                     <i class="uil uil-graduation-cap qualification_icon"></i>
-                    Educação.
+                    Educação
+                </div>
+
+                <div class="qualification_button button--flex">
+                    <i class="uil uil-briefcase-alt qualification_icon"></i>
+                    Experiências Profissionais
                 </div>
             </div>
         </div>
