commit html qualification rounder

--- a/index.html
+++ b/index.html
@@ -282,6 +282,23 @@
 
             <div class="qualification_sections">
                 <!-- qualification content 1-->
+                <div class="qualification_content">
+                    <!-- qualification 1 -->
+                    <div class="qualification_data">
+                        <div>
+                            <h3 class="qualification_title">Sistemas de Informação</h3>
+                            <span class="qualification_subtitle">Universidade Santa Cecília</span>
+                            <div class="qualification_calendar">
+                                <i class="uil uil-calendar-alt"></i>
+                                2021 - 2024
+                            </div>
+                        </div>
+
+                        <div>
+                            <span class="qualification_rounder"></span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
