--- a/index.html
+++ b/index.html
@@ -296,6 +296,59 @@
 
                         <div>
                             <span class="qualification_rounder"></span>
+                            <span class="qualification_line"></span>
+                        </div>
+                    </div>
+
+                    <!-- qualification 2 -->
+                    <div class="qualification_data">
+                        <div></div>
+                        <div>
+                            <span class="qualification_rounder"></span>
+                            <span class="qualification_line"></span>
+                        </div>
+                        
+                        <div>
+                            <h3 class="qualification_title">MySQL</h3>
+                            <span class="qualification_subtitle">Curso em vídeo</span>
+                            <div class="qualification_calendar">
+                                <i class="uil uil-calendar-alt"></i>
+                                2022 - 2022
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- qualification 1 -->
+                    <div class="qualification_data">
+                        <div>
+                            <h3 class="qualification_title">JavaScript</h3>
+                            <span class="qualification_subtitle">Origami</span>
+                            <div class="qualification_calendar">
+                                <i class="uil uil-calendar-alt"></i>
+                                2022 - 2022
+                            </div>
+                        </div>
+
+                        <div>
+                            <span class="qualification_rounder"></span>
+                            <span class="qualification_line"></span>
+                        </div>
+                    </div>
+
+                    <!-- qualification 1 -->
+                    <div class="qualification_data">
+                        <div>
+                            <h3 class="qualification_title">Ingles - Avançado</h3>
+                            <span class="qualification_subtitle">CNA</span>
+                            <div class="qualification_calendar">
+                                <i class="uil uil-calendar-alt"></i>
+                                2016 - 2018
+                            </div>
+                        </div>
+
+                        <div>
+                            <span class="qualification_rounder"></span>
+                            <span class="qualification_line"></span>
                         </div>
                     </div>
                 </div>
