commit html qualification

--- a/index.html
+++ b/index.html
@@ -309,11 +309,11 @@
                         </div>
                         
                         <div>
-                            <h3 class="qualification_title">MySQL</h3>
-                            <span class="qualification_subtitle">Curso em vídeo</span>
+                            <h3 class="qualification_title">CSharp</h3>
+                            <span class="qualification_subtitle">Unisanta</span>
                             <div class="qualification_calendar">
                                 <i class="uil uil-calendar-alt"></i>
-                                2022 - 2022
+                                2021 - 2022
                             </div>
                         </div>
                     </div>
@@ -321,8 +321,8 @@
                     <!-- qualification 3 -->
                     <div class="qualification_data">
                         <div>
-                            <h3 class="qualification_title">JavaScript</h3>
-                            <span class="qualification_subtitle">Origami</span>
+                            <h3 class="qualification_title">Java</h3>
+                            <span class="qualification_subtitle">Unisanta</span>
                             <div class="qualification_calendar">
                                 <i class="uil uil-calendar-alt"></i>
                                 2022 - 2022
@@ -337,8 +337,15 @@
 
                     <!-- qualification 4 -->
                     <div class="qualification_data">
+                        <div></div>
+
                         <div>
-                            <h3 class="qualification_title">Ingles - Avançado</h3>
+                            <span class="qualification_rounder"></span>
+                            <!-- <span class="qualification_line"></span> -->
+                        </div>
+
+                        <div>
+                            <h3 class="qualification_title">Inglês - Avançado</h3>
                             <span class="qualification_subtitle">CNA</span>
                             <div class="qualification_calendar">
                                 <i class="uil uil-calendar-alt"></i>
@@ -346,12 +353,80 @@
                             </div>
                         </div>
 
-                        <div>
-                            <span class="qualification_rounder"></span>
-                            <span class="qualification_line"></span>
-                        </div>
                     </div>
                 </div>
+            </div>
+
+            <!-- qualification 1 -->
+            <div class="qualification_data">
+                <div>
+                    <h3 class="qualification_title">UI Design</h3>
+                    <span class="qualification_subtitle">Origami</span>
+                    <div class="qualification_calendar">
+                        <i class="uil uil-calendar-alt"></i>
+                        2022 - 2023
+                    </div>
+                </div>
+
+                <div>
+                    <span class="qualification_rounder"></span>
+                    <span class="qualification_line"></span>
+                </div>
+            </div>
+
+            <!-- qualification 2 -->
+            <div class="qualification_data">
+                <div></div>
+                <div>
+                    <span class="qualification_rounder"></span>
+                    <span class="qualification_line"></span>
+                </div>
+                
+                <div>
+                    <h3 class="qualification_title">JavaScript</h3>
+                    <span class="qualification_subtitle">Origami</span>
+                    <div class="qualification_calendar">
+                        <i class="uil uil-calendar-alt"></i>
+                        2022 - 2023
+                    </div>
+                </div>
+            </div>
+
+            <!-- qualification 3 -->
+            <div class="qualification_data">
+                <div>
+                    <h3 class="qualification_title">Angular</h3>
+                    <span class="qualification_subtitle">Unisanta</span>
+                    <div class="qualification_calendar">
+                        <i class="uil uil-calendar-alt"></i>
+                        2022 - 2023
+                    </div>
+                </div>
+
+                <div>
+                    <span class="qualification_rounder"></span>
+                    <span class="qualification_line"></span>
+                </div>
+            </div>
+
+            <!-- qualification 4 -->
+            <div class="qualification_data">
+                <div></div>
+
+                <div>
+                    <span class="qualification_rounder"></span>
+                    <!-- <span class="qualification_line"></span> -->
+                </div>
+
+                <div>
+                    <h3 class="qualification_title">React</h3>
+                    <span class="qualification_subtitle">Origami</span>
+                    <div class="qualification_calendar">
+                        <i class="uil uil-calendar-alt"></i>
+                        2022 - 2023
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
