commit data content education html

--- a/index.html
+++ b/index.html
@@ -279,10 +279,9 @@
                 </div>
             </div>
 
-
             <div class="qualification_sections">
                 <!-- qualification content 1-->
-                <div class="qualification_content">
+                <div class="qualification_content" data-content id="education">
                     <!-- qualification 1 -->
                     <div class="qualification_data">
                         <div>
@@ -355,9 +354,9 @@
 
                     </div>
                 </div>
-            </div>
+            
 
-            <!-- qualification 1 -->
+            <!-- qualification content 2 -->
             <div class="qualification_data">
                 <div>
                     <h3 class="qualification_title">UI Design</h3>
@@ -426,8 +425,8 @@
                         2022 - 2023
                     </div>
                 </div>
-
             </div>
+        </div>
         </div>
     </section>
 
