--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
             
 
             <!-- qualification content 2 -->
-            <div class="qualification_data">
+            <div class="qualification_data" data-content id="work">
                 <div>
                     <h3 class="qualification_title">UI Design</h3>
                     <span class="qualification_subtitle">Origami</span>
