--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
             <div class="qualification_sections">
                 <!-- qualification content 1-->
-                <div class="qualification_content" data-content id="education">
+                <div class="qualification_content qualification_active" data-content id="education">
                     <!-- qualification 1 -->
                     <div class="qualification_data">
                         <div>
