--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         </div>
                     </div>
                     <div class="about_buttons">
-                        <a download="" href="./curriculo/MariaRita.pdf" class="button button-flex">
+                        <a download="" href="./curriculo/MariaRita.pdf" class="button button--flex">
                             Download CV <i class="uil uil-download-alt"></i>
                         </a>
                     </div>
@@ -415,17 +415,32 @@
 
     <!-- Services -->
 
-    <section class="services section" id="services">
-        <h2 class="section_title">Services</h2>
+    <section class="services section" id="projetos">
+        <h2 class="section_title">Projetos</h2>
         <span class="section_subtitle">What i offer</span>
 
         <div class="services_container container grid">
             <!-- services 1 -->
-            <div class="services_container container grid">
-                <i class="uil uil-web-grid services_icon"></i>
-                
+            <div class="services_container">
+                <div>
+                    <i class="uil uil-web-grid services_icon"></i>
+                    <h3 class="services_title">Front-end <br> Developer</h3>
+                </div>
+
+                <span class="button button--flex button--small button--link services_button">
+                    Ver Mais
+                    <i class="uil uil-arrow-right button_icon"></i>
+                </span>
+
+                <div class="services_modal">
+                    <div class="services_modal-content">
+                        <h4 class="ervices_modal-title">Front-end<br>Developer</h4>
+                        <i class="uil uil-times services_modal-close"></i>
+
+                        
+                    </div>
+                </div>
             </div>
-        </div>
     </section>
 
 
