--- a/index.html
+++ b/index.html
@@ -437,7 +437,11 @@
                         <h4 class="ervices_modal-title">Front-end<br>Developer</h4>
                         <i class="uil uil-times services_modal-close"></i>
 
-                        
+                        <ul class="services_modal-services grid">
+                            <li class="services_modal-service">
+                                
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
