--- a/index.html
+++ b/index.html
@@ -439,7 +439,20 @@
 
                         <ul class="services_modal-services grid">
                             <li class="services_modal-service">
-                                
+                                <i class="uil uil-check-circle services_modal-icon"></i>
+                                <p>Página inicial do Starbucks</p>
+                            </li>
+                            <li class="services_modal-service">
+                                <i class="uil uil-check-circle services_modal-icon"></i>
+                                <p>Página inicial do League of Legends</p>
+                            </li>
+                            <li class="services_modal-service">
+                                <i class="uil uil-check-circle services_modal-icon"></i>
+                                <p>Página inicial da Netflix</p>
+                            </li>
+                            <li class="services_modal-service">
+                                <i class="uil uil-check-circle services_modal-icon"></i>
+                                <p>Desing/Frontend do Operação Granel</p>
                             </li>
                         </ul>
                     </div>
